# sluice

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
deploy/: .env.example  README.md  compose.yaml
docs/: client-configuration.md  concurrency-model.md  plan013-retry-after-capture-2026-07-04.md  wi-024-429-capture-2026-07-03.md  wi-033-canonical-429-bodies.md
plans/: 001-data-plane-and-reconciliation.md  002-status-web-ui.md  003-truth-path-correctness.md  004-single-instance-safety.md  005-client-fairness.md  006-multi-provider.md  007-streaming-lifecycle-test-fidelity.md  008-history-persistence.md  009-sparkline-depth.md  010-dashboard-events-and-throughput.md  011-dashboard-runtime-settings.md  012-dashboard-login-page.md  013-honest-retry-after.md  014-windows-service.md
reflections/: 2026-06-27-glm-5-2.md  2026-06-28-glm-5-2-2.md  2026-06-28-glm-5-2.md  2026-07-01-glm-5-2-2.md  2026-07-01-glm-5-2-3.md  2026-07-01-glm-5-2-4.md  2026-07-01-glm-5-2-5.md  2026-07-01-glm-5-2.md  2026-07-02-glm-5-2-2.md  2026-07-02-glm-5-2.md  2026-07-02-kimi-k2-7.md  2026-07-03-glm-5-2-2.md  2026-07-03-glm-5-2-3.md  2026-07-03-glm-5-2.md  2026-07-04-glm-5-2-2.md  2026-07-04-glm-5-2-3.md  2026-07-04-glm-5-2-4.md  2026-07-04-glm-5-2.md  2026-07-05-glm-5-2-2.md  2026-07-05-glm-5-2.md  2026-07-06-glm-5-2.md  2026-07-07-glm-5-2.md  2026-07-08-glm-5-2.md  2026-07-15-glm-5-2.md
scripts/: check_committed_identifiers.py  install-windows.ps1  soak.py  uninstall-windows.ps1
tests/: test_adaptive.py  test_cli.py  (+20 more)
(+42 files in other folders)
